chore: metas OG, ajustes de estilos y lightbox

--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,40 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Víctor Vera — Portfolio</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="dev-icon.png">
-  <!-- Open Graph (Facebook, LinkedIn, WhatsApp, etc.) -->
-<meta property="og:title" content="Emilio Sánchez Vargas - Portfolio" />
-<meta property="og:description" content="Desarrollador Android & Web | Mis proyectos, experiencia y contacto" />
-<meta property="og:image" content="https://emiliosanchezdev.netlify.app/assets/preview-home.png" />
-<meta property="og:url" content="https://emiliosanchezdev.netlify.app" />
-<meta property="og:type" content="website" />
+  <meta name="theme-color" content="#0b0d13">
+  <meta name="robots" content="index,follow">
 
-<!-- Twitter Card (por si compartes en Twitter/X) -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Emilio Sánchez Vargas - Portfolio" />
-<meta name="twitter:description" content="Desarrollador Android & Web | Mis proyectos, experiencia y contacto" />
-<meta name="twitter:image" content="https://emiliosanchezdev.netlify.app/assets/preview-home.png" />
+  <!-- Favicon (asegúrate de tener este archivo en public/assets/dev-icon.png) -->
+  <link rel="icon" type="image/png" href="/assets/dev-icon.png">
 
+  <!-- ===== Social Preview (Open Graph / Twitter) ===== -->
+  <!-- Cambia el dominio si publicas en otro sitio -->
+  <meta property="og:title" content="Víctor Vera — Portfolio">
+  <meta property="og:description" content="Desarrollador Android & Web. Proyectos, experiencia y contacto.">
+  <meta property="og:image" content="https://portfolio-victor-vera.netlify.app/assets/og/og-home.jpg">
+  <meta property="og:url" content="https://portfolio-victor-vera.netlify.app">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Víctor Vera — Portfolio">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Víctor Vera — Portfolio">
+  <meta name="twitter:description" content="Desarrollador Android & Web. Proyectos, experiencia y contacto.">
+  <meta name="twitter:image" content="https://portfolio-victor-vera.netlify.app/assets/og/og-home.jpg">
+
+  <!-- (Opcional) Preloads de fuentes o imágenes críticas
+  <link rel="preload" href="/assets/og/og-home.jpg" as="image">
+  -->
 </head>
 <body>
   <app-root></app-root>
+
+  <noscript>
+    Necesitas habilitar JavaScript para ver este sitio correctamente.
+  </noscript>
 </body>
 </html>
